src/test/ui/error-codes/E0227.rs
trait Foo<'foo>: 'foo {}
trait Bar<'bar>: 'bar {}

trait FooBar<'foo, 'bar>: Foo<'foo> + Bar<'bar> {}

struct Baz<'foo, 'bar> {
    baz: dyn FooBar<'foo, 'bar>,
    //~^ ERROR ambiguous lifetime bound, explicit lifetime bound required
}

fn main() {
}
